tests/errors/erro_do_scope.lua
function void main()
    do
        local x : integer = 10;
    end
    print(x); -- Erro: x não existe aqui
end
